--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@ avatar: /images/ls.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
-  facebook:
+  email: les231@miami.edu
+  facebook:Luli Schmader
   flickr:
   github: amitmerchant1990/reverie
-  instagram:
+  instagram:@harmonious_beings
   linkedin: 
   pinterest:
   rss: rss
