--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Luli Schmader
 author: Amit Merchant
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/ls.png
@@ -46,7 +46,7 @@ google_analytics: UA-43339302-11
 # For newer "GA4" analytics, use the following instead of the "UA" entry above
 #google_analytics_ga4: G-GABC1DEFG
 
-# Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
+# Your website URL (http://www.lulischmader.com)
 # Used for Sitemap.xml and your RSS feed
 url: http://www.amitmerchant.com/reverie
 enforce_ssl: https://www.amitmerchant.com/reverie
