--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Luli Schmader
 author: Amit Merchant
 
 # Short bio or description (displayed in the header)
-description: Welcome to my site
+description: Welcome to my site I am Lourdes Schmader, and I am a second-year student in the Ph.D. Program in Literary, Culture and linguistic studies at the University of Miami. My research focuses on the Indigenous Cosmovision of the Peoples of **Abya Yala** (the oldest known name for the American Continent) and their cultural productions, with emphasis on their activism and innovative forms of radical resurgence that propose alternative ways to combat the ecological crisis in the Amazon and around the world.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/ls.png
