--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ author: Amit Merchant
 
 # Short bio or description (displayed in the header)
 description: Welcome to my site
+<p> Lourdes Schmader cursa el segundo año del programa PhD. De estudios literarios culturales y lingüísticos en la Universidad de Miami. Su investigación se centra en la Cosmovisión Indígena de los Pueblos de Abya Yala (el nombre más antiguo conocido para el Continente Americano) y sus producciones culturales, así como su activismo como formas innovadoras de resurgimiento radical que proponen vías alternativas para combatir la crisis ecológica en el Amazonas y en todo el mundo.</p>
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/ls.png
